schedulers/volcano/monitoring_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: volcano-monitoring
  name: volcano-monitoring
