schedulers/volcano/system_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: volcano-system
  name: volcano-system
