schedulers/volcano/admission-service-jobs-mutate_mutatingwebhookconfiguration.yaml

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: volcano-admission-service-jobs-mutate
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: volcano-admission-service
      namespace: volcano-system
      path: /jobs/mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mutatejob.volcano.sh
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - volcano-system
      - kube-system
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - batch.volcano.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - jobs
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
