schedulers/volcano/admission-service-pods-mutate_mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: volcano-admission-service-pods-mutate
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: volcano-admission-service
      namespace: volcano-system
      path: /pods/mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mutatepod.volcano.sh
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - volcano-system
      - kube-system
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
