schedulers/volcano/admission-service-pods-validate_validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: volcano-admission-service-pods-validate
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: volcano-admission-service
      namespace: volcano-system
      path: /pods/validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validatepod.volcano.sh
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - volcano-system
      - kube-system
  objectSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
