schedulers/volcano/admission-service-queues-validate_validatingwebhookconfiguration.yaml

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: volcano-admission-service-queues-validate
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: volcano-admission-service
      namespace: volcano-system
      path: /queues/validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validatequeue.volcano.sh
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - volcano-system
      - kube-system
  objectSelector: {}
  rules:
  - apiGroups:
    - scheduling.volcano.sh
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - queues
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
